force-app/main/default/objects/Fraud_Error__c/Fraud_Error__c.object-meta.xml
<CustomObject>
    <description>Object to capture any reports of Fraud and Error that have been identified for warm homes project</description>
    <label>Fraud &amp; Error</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Fraud and Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud &amp; Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>