force-app/main/default/objects/Fraud_Error__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <description>Enter the name/ email address of the person responsible for the mitigating action</description>
    <inlineHelpText>Enter the name/ email address of the person responsible for the mitigating action</inlineHelpText>
    <label>Action Owner</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>