force-app/main/default/objects/Fraud_Error__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Who committed /caused the fraud, error and non-compliance Eg. home owner, retrofit assessor, supplier, landlord, internal staff etc.</description>
    <inlineHelpText>Who committed /caused the fraud, error and non-compliance Eg. home owner, retrofit assessor, supplier, landlord, internal staff etc.</inlineHelpText>
    <label>Actor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homeowner</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Installer/Supplier</fullName>
            </value>
            <value>
                <fullName>Retrofit Assessor/Advisor</fullName>
            </value>
            <value>
                <fullName>Sub-contractor</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>