force-app/main/default/objects/Fraud_Error__c/fields/Actor_Other__c.field-meta.xml
<CustomField>
    <fullName>Actor_Other__c</fullName>
    <label>Actor - Other</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>