force-app/main/default/objects/Fraud_Error__c/fields/Affected_Address__c.field-meta.xml
<CustomField>
    <fullName>Affected_Address__c</fullName>
    <formula>Property_Address__r.Street +&quot;,&quot;+  Property_Address__r.City +&quot;,&quot;+   Property_Address__r.State +&quot;,&quot;+ Property_Address__r.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affected Address</label>
    <type>Text</type>
</CustomField>