force-app/main/default/objects/Fraud_Error__c/fields/Case_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_End_Date__c</fullName>
    <description>Enter the end date of the case as DD/MM/YYYY. If case is still WIP and not resolved, leave the date as blank</description>
    <inlineHelpText>Enter the end date of the case as DD/MM/YYYY. If case is still WIP and not resolved, leave the date as blank</inlineHelpText>
    <label>Case End Date</label>
    <type>Date</type>
</CustomField>