force-app/main/default/objects/Fraud_Error__c/fields/Case_Started__c.field-meta.xml
<CustomField>
    <fullName>Case_Started__c</fullName>
    <label>Case Started</label>
    <type>Date</type>
</CustomField>