force-app/main/default/objects/Fraud_Error__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <inlineHelpText>Fraud:Intentionally making  a false representation or failing to disclose relevant information, or the abuse of position, to make a gain or cause 
Error: Losses arising from unintentional events processing error and officiaal / administrations errors
Non-Compliance: failure or refusal to act in accordance with a set of rules, regulations, or standards</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Non-Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>