force-app/main/default/objects/Fraud_Error__c/fields/Category_of_Risk_Areas__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Risk_Areas__c</fullName>
    <label>Category of Risk Areas</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Summary_of_Risk__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Money Sent to the Incorrect Supplier</fullName>
            </value>
            <value>
                <fullName>Incorrect Amount Sent to the Supplier</fullName>
            </value>
            <value>
                <fullName>Collusion Between Supplier and Internal Staff</fullName>
            </value>
            <value>
                <fullName>Incorrect Expenditure (Grant Instead of Co-Funding)</fullName>
            </value>
            <value>
                <fullName>Asset Misappropriation</fullName>
            </value>
            <value>
                <fullName>Contract Rigging</fullName>
            </value>
            <value>
                <fullName>Mandate Fraud</fullName>
            </value>
            <value>
                <fullName>Payment Fraud</fullName>
            </value>
            <value>
                <fullName>Misuse of Funding</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest Between Internal Staff and Supplier</fullName>
            </value>
            <value>
                <fullName>Co-Funding Contribution Amount Paid From Grant Instead of Landlord/Third Party</fullName>
            </value>
            <value>
                <fullName>Collusion Between Scheme Administrator (Internal Staff) and Homeowner/Landlord</fullName>
            </value>
            <value>
                <fullName>Collusion Between Supplier and Homeowner/Landlord</fullName>
            </value>
            <value>
                <fullName>Collusion Between Retrofit Co-Ordinator and Homeowner/Landlord</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False Information on the Application: Undeclared Partners</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False Information on the Application: Income</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False Information on the Application: Benefit Receipt</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False Information on the Application: Other</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - Owner Not Occupier</fullName>
            </value>
            <value>
                <fullName>Ineligible Application - False Information on the Application: False ID</fullName>
            </value>
            <value>
                <fullName>Coercion</fullName>
            </value>
            <value>
                <fullName>Ineligible Property - False Information on the Application</fullName>
            </value>
            <value>
                <fullName>Ineligible Property - Falsified/Incorrect EPC From Pre-Installation Check</fullName>
            </value>
            <value>
                <fullName>Ineligible Property - Non Domestic</fullName>
            </value>
            <value>
                <fullName>Property Does Not Exist</fullName>
            </value>
            <value>
                <fullName>Measure Already Exists in the Property</fullName>
            </value>
            <value>
                <fullName>Measure Not Compliant With Standards/Cannot Be Lodged</fullName>
            </value>
            <value>
                <fullName>Measures Not Installed</fullName>
            </value>
            <value>
                <fullName>Measure Substitution (And Substitution Not Compliant)</fullName>
            </value>
            <value>
                <fullName>Overstating the Cost of Measures/Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>