force-app/main/default/objects/Fraud_Error__c/fields/Category_of_Risk_Areas_Other__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Risk_Areas_Other__c</fullName>
    <label>Category of Risk Areas - Other</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>