force-app/main/default/objects/Fraud_Error__c/fields/Closed_Case_Corrected_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Case_Corrected_Date__c</fullName>
    <description>Populate this column if a previous case which you closed has now been amended/corrected. This should be the date that the case was corrected.</description>
    <inlineHelpText>Populate this column if a previous case which you closed has now been amended/corrected. This should be the date that the case was corrected.</inlineHelpText>
    <label>Closed Case Corrected Date</label>
    <type>Date</type>
</CustomField>