force-app/main/default/objects/Fraud_Error__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <label>Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>GR to DP</fullName>
            </value>
            <value>
                <fullName>DP to SHF W3</fullName>
            </value>
            <value>
                <fullName>DP to WH: LG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>