force-app/main/default/objects/Fraud_Error__c/fields/Fraud_RAG__c.field-meta.xml
<CustomField>
    <fullName>Fraud_RAG__c</fullName>
    <label>Fraud RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>AMBER</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>