force-app/main/default/objects/Fraud_Error__c/fields/Fraud_RAG_Justification__c.field-meta.xml
<CustomField>
    <fullName>Fraud_RAG_Justification__c</fullName>
    <label>Fraud RAG Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>