force-app/main/default/objects/Fraud_Error__c/fields/Fraud_Severity__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Severity__c</fullName>
    <label>Fraud Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trivial</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>