force-app/main/default/objects/Fraud_Error__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Fraud &amp; Error</relationshipLabel>
    <relationshipName>Fraud_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>