force-app/main/default/objects/Fraud_Error__c/fields/Grant_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Grant_Recipient__c</fullName>
    <formula>Funding_Award__r.Awardee.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grant Recipient</label>
    <type>Text</type>
</CustomField>