force-app/main/default/objects/Fraud_Error__c/fields/Installer_Supplier_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Installer_Supplier_Account_Name__c</fullName>
    <formula>Installer_Supplier_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installer/Supplier Account Name</label>
    <type>Text</type>
</CustomField>