force-app/main/default/objects/Fraud_Error__c/fields/Installer_Supplier_Manually_Entered__c.field-meta.xml
<CustomField>
    <fullName>Installer_Supplier_Manually_Entered__c</fullName>
    <description>Installer/Supplier details (manually entered) as details could not be found</description>
    <inlineHelpText>Installer/Supplier (Manually Entered) as details could not be found</inlineHelpText>
    <label>Installer/Supplier (Manually Entered)</label>
    <type>TextArea</type>
</CustomField>