force-app/main/default/objects/Fraud_Error__c/fields/Installer_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Installer_Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only if applicable (if the summary selected is installer/supplier) If installer fraud, error, non-compliance, to let us know detail - Enter the installer/supplier name if cannot find from the list provided</description>
    <inlineHelpText>Only if applicable (if the summary selected is installer/supplier) If installer fraud, error, non-compliance, to let us know detail - Enter the installer/supplier name if cannot find from the list provided</inlineHelpText>
    <label>Installer / Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fraud &amp; Errors</relationshipLabel>
    <relationshipName>Fraud_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>