force-app/main/default/objects/Fraud_Error__c/fields/Is_Latest_Version__c.field-meta.xml
<CustomField>
    <fullName>Is_Latest_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the most current version</description>
    <inlineHelpText>Indicates the most current version</inlineHelpText>
    <label>Is Latest Version</label>
    <type>Checkbox</type>
</CustomField>