force-app/main/default/objects/Fraud_Error__c/fields/LA_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LA_Identifier__c</fullName>
    <description>LA Identifier that contains the Reference Number plus the version no. of the original fraud and error record</description>
    <inlineHelpText>LA Identifier that contains the Reference Number plus the version no. of the original fraud and error record</inlineHelpText>
    <label>LA Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>