force-app/main/default/objects/Fraud_Error__c/fields/Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Type__c</fullName>
    <description>Loss Type - Prevented - stopped ahead of money exchanged, Detected - found after money exchanged</description>
    <inlineHelpText>Loss Type - Prevented - stopped ahead of money exchanged, Detected - found after money exchanged</inlineHelpText>
    <label>Loss Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prevented</fullName>
            </value>
            <value>
                <fullName>Detected</fullName>
            </value>
            <value>
                <fullName>Prevented and Detected</fullName>
            </value>
            <value>
                <fullName>Recovered</fullName>
            </value>
            <value>
                <fullName>Recovered and Detected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>