force-app/main/default/objects/Fraud_Error__c/fields/Original_Version__c.field-meta.xml
<CustomField>
    <fullName>Original_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the original version of the Fraud and Error record</inlineHelpText>
    <label>Original Version</label>
    <referenceTo>Fraud_Error__c</referenceTo>
    <relationshipLabel>Fraud &amp; Errors (Original Version)</relationshipLabel>
    <relationshipName>Original_Fraud_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>