force-app/main/default/objects/Fraud_Error__c/fields/Outstanding_Debt_Value__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Debt_Value__c</fullName>
    <description>Financial value outstanding to recover</description>
    <inlineHelpText>Financial value outstanding to recover</inlineHelpText>
    <label>Outstanding Debt Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>