force-app/main/default/objects/Fraud_Error__c/fields/Parent_Funding_Award_Update__c.field-meta.xml
<CustomField>
    <fullName>Parent_Funding_Award_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>One-to-One Relationship with parent Update record</inlineHelpText>
    <label>Parent Funding Award Update</label>
    <referenceTo>FundingAwardUpdate__c</referenceTo>
    <relationshipLabel>Fraud &amp; Errors</relationshipLabel>
    <relationshipName>Fraud_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>