force-app/main/default/objects/Fraud_Error__c/fields/Prevented_Actual_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Prevented_Actual_Estimate__c</fullName>
    <inlineHelpText>Enter the value of fraud, error or non-compliance for the case, which can either be an actual or an estimate: 

Actual – the value is known, e.g. amount disputing on the invoice 

Estimate – where the amount is not known, and a credible estimate has been calculated, e.g. average cost of a measure.</inlineHelpText>
    <label>Prevented Actual/Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Estimate (Used project average)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>