force-app/main/default/objects/Fraud_Error__c/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the previous version of the Fraud and Error record</inlineHelpText>
    <label>Previous Version</label>
    <referenceTo>Fraud_Error__c</referenceTo>
    <relationshipLabel>Next Version</relationshipLabel>
    <relationshipName>Fraud_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>