force-app/main/default/objects/Fraud_Error__c/fields/Previous_Version_Id_Text__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version_Id_Text__c</fullName>
    <label>Previous Version Id Text</label>
    <length>18</length>
    <type>Text</type>
</CustomField>