force-app/main/default/objects/Fraud_Error__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only if applicable (if the summary selected is property/measure) Affected property address details - Enter the address of the property (House name/number, street, postcode) if fraud, error or non/compliance relates to address.</description>
    <inlineHelpText>Only if applicable (if the summary selected is property/measure)Affected property address details - Enter the address of the property (House name/number, street, postcode) if fraud, error or non/compliance relates to address.</inlineHelpText>
    <label>Property Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Fraud &amp; Errors</relationshipLabel>
    <relationshipName>Fraud_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>