force-app/main/default/objects/Fraud_Error__c/fields/Property_Address_Manually_Entered__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Manually_Entered__c</fullName>
    <description>Property Address (Manually Entered) as details of the address could not be found</description>
    <inlineHelpText>Property Address (Manually Entered) as details of the address could not be found</inlineHelpText>
    <label>Property Address (Manually Entered)</label>
    <type>TextArea</type>
</CustomField>