force-app/main/default/objects/Fraud_Error__c/fields/Reason_for_Correction__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Correction__c</fullName>
    <label>Reason for Correction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Management Review</fullName>
            </value>
            <value>
                <fullName>Third Party Driven Review</fullName>
            </value>
            <value>
                <fullName>Appeals</fullName>
            </value>
            <value>
                <fullName>Admin Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>