force-app/main/default/objects/Fraud_Error__c/fields/Reason_for_Correction_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Correction_Other__c</fullName>
    <label>Reason for Correction - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>