force-app/main/default/objects/Fraud_Error__c/fields/Recommendations_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_and_Comments__c</fullName>
    <label>Recommendations and Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>