force-app/main/default/objects/Fraud_Error__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <formula>Funding_Award__r.Funding_Award_Acronym__c +  &quot;-&quot; + Funding_Award__r.FundingOpportunity.Funding_Scheme_Acronym__c  + &quot;-&quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Number</label>
    <type>Text</type>
</CustomField>