force-app/main/default/objects/Fraud_Error__c/fields/Reporting_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Period_Start_Date__c</fullName>
    <inlineHelpText>Allows Fraud and Error reporting to be set up independently of Award updates</inlineHelpText>
    <label>Reporting Period Start Date</label>
    <type>Date</type>
</CustomField>