force-app/main/default/objects/Fraud_Error__c/fields/Resolution_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Action_Taken__c</fullName>
    <description>Describe the mitigation action(s) taken to address/resolve the fraud or error.</description>
    <inlineHelpText>Describe the mitigation action(s) taken to address/resolve the fraud or error.</inlineHelpText>
    <label>Resolution/Action Taken</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corrective Action – Installer/Supplier Issued Credit Note</fullName>
            </value>
            <value>
                <fullName>Corrective Action – Installer/Supplier Remedy the Issue</fullName>
            </value>
            <value>
                <fullName>Corrective Action – Invoice Reissued/Will Be Reissued</fullName>
            </value>
            <value>
                <fullName>Corrective Action – Money Recovered</fullName>
            </value>
            <value>
                <fullName>Conduct Audits on Sample</fullName>
            </value>
            <value>
                <fullName>Installer/Supplier Expelled From Scheme</fullName>
            </value>
            <value>
                <fullName>Debt Recovery Initiated</fullName>
            </value>
            <value>
                <fullName>Prosecution Initiated</fullName>
            </value>
            <value>
                <fullName>No Further Action</fullName>
            </value>
            <value>
                <fullName>Escalation to DESNZ/Their Delivery Partner</fullName>
            </value>
            <value>
                <fullName>Internal Escalation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>