force-app/main/default/objects/Fraud_Error__c/fields/Resolution_Action_Taken_Other__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Action_Taken_Other__c</fullName>
    <label>Resolution/Action Taken - Other</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>