force-app/main/default/objects/Fraud_Error__c/fields/Scheme_Delivering__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Delivering__c</fullName>
    <formula>Funding_Award__r.FundingOpportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheme Delivering</label>
    <type>Text</type>
</CustomField>