force-app/main/default/objects/Fraud_Error__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How was the suspected fraud, error or non-compliance identified</description>
    <inlineHelpText>How was the suspected fraud, error or non-compliance identified</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allegation Received From Public</fullName>
            </value>
            <value>
                <fullName>Due-Diligent Checks Installer</fullName>
            </value>
            <value>
                <fullName>Due-Diligent Checks Landlord</fullName>
            </value>
            <value>
                <fullName>Eligibility Criteria/Rules Checking</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency Installation Checker</fullName>
            </value>
            <value>
                <fullName>Intel Received From Other Organisation (e.g., Delivery Partner, DESNZ)</fullName>
            </value>
            <value>
                <fullName>Internal Quality Assuring Checks</fullName>
            </value>
            <value>
                <fullName>Invoice Checking</fullName>
            </value>
            <value>
                <fullName>Occupier Eligibility Checking (e.g., Income, Benefit Receipt, Identity, etc.)</fullName>
            </value>
            <value>
                <fullName>Property Eligibility Check – EPC Data</fullName>
            </value>
            <value>
                <fullName>Reconciliation Checks: Invoices</fullName>
            </value>
            <value>
                <fullName>Reconciliation Checks: Measures</fullName>
            </value>
            <value>
                <fullName>Routine/Site Audit</fullName>
            </value>
            <value>
                <fullName>TrustMark: Checking Installation of Measures Meet Requirement</fullName>
            </value>
            <value>
                <fullName>TrustMark: Checking Installer Accredited</fullName>
            </value>
            <value>
                <fullName>Whistleblower</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>