force-app/main/default/objects/Fraud_Error__c/fields/Source_of_Internal_Case__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Internal_Case__c</fullName>
    <label>Source of Internal Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop Check</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>GR Assurance Check</fullName>
            </value>
            <value>
                <fullName>A&amp;A Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>