force-app/main/default/objects/Fraud_Error__c/fields/Source_Other__c.field-meta.xml
<CustomField>
    <fullName>Source_Other__c</fullName>
    <label>Source - Other</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>