force-app/main/default/objects/Fraud_Error__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Work in progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Brought Forward</fullName>
            </value>
            <value>
                <fullName>Open/Ongoing</fullName>
                <isActive>false</isActive>
                <label>Open/Ongoing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>