force-app/main/default/objects/Fraud_Error__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>Summary of the Fraud or Error Case</inlineHelpText>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>