force-app/main/default/objects/Fraud_Error__c/fields/Trustmark_Business_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_Business_License_Number__c</fullName>
    <formula>Installer_Supplier_Name__r.Trustmark_Business_License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trustmark Business License Number</label>
    <type>Text</type>
</CustomField>