force-app/main/default/objects/Fraud_Error__c/fields/Value_Detected__c.field-meta.xml
<CustomField>
    <fullName>Value_Detected__c</fullName>
    <description>Detected: the value identified after transferals of funds</description>
    <inlineHelpText>Detected: the value identified after transferals of funds</inlineHelpText>
    <label>Value Detected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>