force-app/main/default/objects/Fraud_Error__c/fields/Value_Estimated_Prevented__c.field-meta.xml
<CustomField>
    <fullName>Value_Estimated_Prevented__c</fullName>
    <description>Value or estimated value of the fraud/error/non compliance eg invoice amount, average cost of measure</description>
    <inlineHelpText>Value or estimated value of the fraud/error/non compliance eg invoice amount, average cost of measure</inlineHelpText>
    <label>Value/Estimated Prevented</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>