force-app/main/default/objects/Fraud_Error__c/fields/Value_Recovered__c.field-meta.xml
<CustomField>
    <fullName>Value_Recovered__c</fullName>
    <description>Recovered: the value that was recovered after detected</description>
    <inlineHelpText>Recovered: the value that was recovered after detected</inlineHelpText>
    <label>Value Recovered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>