force-app/main/default/objects/Fraud_Error__c/recordTypes/Fraud_and_Error.recordType-meta.xml
<RecordType>
    <fullName>Fraud_and_Error</fullName>
    <active>true</active>
    <label>Fraud and Error</label>
</RecordType>